# parchdroid

./: LICENSE  PKGBUILD  README.md  pyproject.toml
data/: parchdroid.desktop
data/locale/fa/LC_MESSAGES/: parchdroid.mo  parchdroid.po
src/: main.py
src/core/: installer.py  system_check.py  waydroid_manager.py
src/ui/: main_window.py  main_window_back.py
