[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "parchdroid"
version = "1.0.0"
description = "Android App Support for Parch Linux - Waydroid Manager"
authors = [{name = "Parch Linux Team"}]
license = {text = "GPL-3.0-only"}
requires-python = ">=3.10"
dependencies = [
    "PyGObject",
    "pexpect",
]
